--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="google-site-verification" content="oRTYsXy0Oow3b3UjeBeAVSEqYEIimnqOm9n97R74UBg" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Roof Leak Repair Singapore | Professional Roofing Services</title>
